# bazel-playground

./: .clang-tidy  BUILD.bazel  README.md  WORKSPACE  make.sh
external-deps/: gtest.BUILD
lib/: BUILD
main/: BUILD
test/: BUILD  BUILD.bazel  hello-test.cc
