# https://stackoverflow.com/a/51847781
cc_test(
    name = "hello-test",
    srcs = ["hello-test.cc"],
    deps = [
        "@gtest//:gtest",  # need for #include "gtest/gtest.h"
        "@gtest//:gtest_main",  # need because hello-test has no main()
        "//main:hello-greet",  # need for #include "main/hello-greet.h"
    ]
)
